Fix documentation due to code simplification with providers (#3332)
* Fix documentation due to code simplification with providers

---------

Signed-off-by: Olivier Lamy <olamy@apache.org>