@@ -1,19 +1,21 @@
 # Apache Maven Surefire - Copilot Instructions
 
+This repository contains Apache Maven Surefire - a test framework project providing the `maven-surefire-plugin`, `maven-failsafe-plugin`, and `maven-surefire-report-plugin`.
+
 ## Build Commands
 
 ```bash
-# Full build (unit tests only, no integration tests)
+# Full build (unit tests only)
 mvn clean install
 
 # Full build with integration tests
-mvn clean install -P run-its
+mvn clean install -Prun-its
 
 # Build a single module
 mvn clean install -pl surefire-api
-mvn clean install -pl surefire-booter
+mvn clean install -pl :maven-surefire-report-plugin -am   # -am builds dependencies too
 
-# Skip tests during build
+# Skip tests
 mvn clean install -DskipTests
 
 # Run unit tests for a single module
@@ -25,17 +27,17 @@ mvn test -pl surefire-booter -Dtest=ForkedBooterTest
 # Run a single test method
 mvn test -pl surefire-booter -Dtest=ForkedBooterTest#testMethod
 
-# Run a single integration test (requires -P run-its)
+# Run a single integration test (requires -Prun-its)
 mvn verify -pl surefire-its -Prun-its -Dit.test=JUnit47RedirectOutputIT -Dmaven.build.cache.enabled=false
+
+# Checkstyle
+mvn checkstyle:check
 
 # Build site documentation
 mvn site -pl maven-surefire-plugin
-
-# Checkstyle (inherited from maven-parent, suppressions in src/config/checkstyle-suppressions.xml)
-mvn checkstyle:check
 ```
 
-## Architecture
+## High-Level Architecture
 
 ### Module Dependency Flow
 
@@ -54,66 +56,82 @@ maven-surefire-common  (AbstractSurefireMojo - shared Mojo logic)
         └──▶ surefire-providers/surefire-junit-platform  (unified test execution)
 ```
 
+**Other modules:**
+- `surefire-report-parser` + `maven-surefire-report-plugin` (reporting)
+- `surefire-its` (integration tests)
+- `surefire-shared-utils` (shaded dependencies)
+- `surefire-shadefire` (self-testing support)
+
 ### Forked JVM Architecture
 
-Surefire executes tests in a **forked JVM** separate from the Maven process. Understanding this split is essential:
+Tests execute in a **forked JVM** separate from the Maven process:
 
-- **Maven side** (`maven-surefire-common`): `AbstractSurefireMojo` configures and launches the fork. `booterclient/` handles communication with the forked process.
-- **Forked side** (`surefire-booter`): `ForkedBooter.main()` is the entry point. It deserializes configuration, loads the provider, and runs tests. Communicates results back via an event-based binary stream protocol.
-- **Shared contract** (`surefire-api`): Defines the `SurefireProvider` SPI, report events, and the stream protocol used between Maven and forked processes.
-
-### Shading Strategy
-
-Two modules exist solely for classpath isolation:
-
-- **`surefire-shared-utils`**: Shades commons-lang3, commons-io, commons-compress, and maven-shared-utils into `org.apache.maven.surefire.shared.*` to avoid version conflicts with user projects.
-- **`surefire-shadefire`**: Shades the entire surefire-junit-platform provider (plus surefire-api, surefire-booter) into `org.apache.maven.shadefire.*` so Surefire can test **itself** without classpath conflicts during its own build.
+- **Maven side** (`maven-surefire-common`): `AbstractSurefireMojo` configures and launches the fork. `booterclient/` handles communication.
+- **Forked side** (`surefire-booter`): `ForkedBooter.main()` is the entry point. Deserializes configuration, loads the provider, runs tests. Results flow back via binary stream protocol.
+- **Shared contract** (`surefire-api`): Defines the `SurefireProvider` SPI, report events, and stream protocol.
 
 ### Provider Model
 
-All test frameworks execute through the JUnit Platform provider (`surefire-providers/surefire-junit-platform`):
+All test frameworks execute through the unified JUnit Platform provider (`surefire-providers/surefire-junit-platform`):
+- **JUnit 5**: Natively via Jupiter Engine
+- **JUnit 4** (4.12+): Via Vintage Engine  
+- **TestNG** (6.14.3+): Via TestNG JUnit Platform Engine
 
-- **JUnit 5**: Runs natively via Jupiter Engine
-- **JUnit 4** (4.12+): Runs via Vintage Engine
-- **TestNG** (6.14.3+): Runs via TestNG JUnit Platform Engine
+### Shading Strategy
 
-Legacy providers (`surefire-junit3`, `surefire-junit4`, `surefire-junit47`, `surefire-testng`) still exist in the tree but are being consolidated.
+- **`surefire-shared-utils`**: Shades commons-lang3, commons-io, commons-compress, maven-shared-utils into `org.apache.maven.surefire.shared.*` to avoid classpath conflicts.
+- **`surefire-shadefire`**: Shades the junit-platform provider so Surefire can test itself without classpath conflicts. The surefire plugin config sets `useSystemClassLoader=false` for test isolation.
 
 ### Integration Tests
 
-`surefire-its` contains integration tests that launch real Maven builds against fixture projects in `surefire-its/src/test/resources/`. These require the `run-its` profile and test the full fork lifecycle end-to-end. They use `maven-verifier` to invoke Maven and assert on build output.
+`surefire-its` contains integration tests that launch real Maven builds against fixture projects in `surefire-its/src/test/resources/`. Requires `-Prun-its`. Uses `maven-verifier` to invoke Maven and assert on build output.
 
 ## Key Conventions
 
 ### Java Version
-
-Source and target is **Java 8**. The `animal-sniffer-maven-plugin` enforces the `java18` API signature. JDK 9+ APIs must be accessed via reflection (see `ProcessHandleChecker` for an example using `ReflectionUtils`).
-
-A `jdk9+` profile auto-activates on JDK 9+ to add `--add-opens` flags for test execution.
+- Source/target is **Java 8**
+- The `animal-sniffer-maven-plugin` enforces the `java18` API signature
+- JDK 9+ APIs must be accessed via reflection (see `ProcessHandleChecker` using `ReflectionUtils`)
 
 ### Reflection Utilities
-
-When accessing APIs not available at compile time (e.g., Java 9+ APIs), use `ReflectionUtils` from `surefire-api` rather than raw reflection:
-
+When accessing APIs not available at compile time, use `ReflectionUtils` from `surefire-api`:
 - `tryLoadClass(classLoader, className)` → returns `null` on failure
-- `tryGetMethod(clazz, name, params)` → returns `null` on failure
+- `tryGetMethod(clazz, name, params)` → returns `null` on failure  
 - `invokeMethodWithArray(target, method, args)` → wraps exceptions in `SurefireReflectionException`
 
 ### IDE Setup
-
-Before importing into an IDE, run:
-
+Before importing into an IDE:
 ```bash
 mvn install -P ide-development -f surefire-shared-utils/pom.xml
-mvn compile -f surefire-grouper/pom.xml
 ```
+The `ide-development` profile resolves IntelliJ artifact classifier issues.
 
-The `ide-development` profile resolves IntelliJ IDEA artifact classifier issues. The `surefire-grouper` module needs a compile pass to generate JavaCC sources in `target/generated-sources/javacc`.
+### Code Formatting
+- **Java**: 4-space indentation
+- **XML**: 2-space indentation
+- Settings defined in `.editorconfig`
+- Checkstyle rules inherited from Maven parent POM with suppressions in `src/config/checkstyle-suppressions.xml`
 
-### Formatting
+### Unit Test Patterns
 
-Follows `.editorconfig`: 4-space indentation for Java, 2-space for XML. Checkstyle rules are inherited from the Maven parent POM with project-specific suppressions in `src/config/checkstyle-suppressions.xml`.
+Report plugin tests (`maven-surefire-report-plugin`) use the `@MojoTest`/`@InjectMojo` framework:
+- `@MojoTest(realRepositorySession = true)` on the test class
+- `@Basedir("/unit")` sets basedir to `src/test/resources/unit`
+- `@InjectMojo(goal = "report", pom = "test-dir/plugin-config.xml")` injects the mojo
+- `@Inject MavenProject mavenProject` for project access
+- `getVariableValueFromObject(mojo, "field")` (static import from `MojoExtension`) to read mojo fields
+- `plugin-config.xml` paths use `${basedir}` which resolves to the `@Basedir` path
+- Stub `project implementation` classes in plugin-config.xml must be commented out (they NPE with `@MojoTest`)
 
-### Test Isolation
+## Development Requirements
 
-Surefire uses a **different version of itself** to run its own tests (see `maven-surefire-plugin` version in `<pluginManagement>` vs `${project.version}`). The `surefire-shadefire` module enables this self-testing. The surefire plugin configuration sets `useSystemClassLoader=false` to isolate the version under test.
+- **Maven**: 3.6.3+
+- **JDK**: 8+
+- **Memory requirements** for release testing:
+  ```bash
+  # Linux/Unix
+  export MAVEN_OPTS="-server -Xmx512m -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=384m -XX:+UseG1GC -XX:+UseStringDeduplication -XX:+TieredCompilation -XX:TieredStopAtLevel=1 -XX:SoftRefLRUPolicyMSPerMB=50 -Djava.awt.headless=true"
+  
+  # Windows
+  set MAVEN_OPTS="-server -Xmx256m -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=384m -XX:+UseG1GC -XX:+UseStringDeduplication -XX:+TieredCompilation -XX:TieredStopAtLevel=1 -XX:SoftRefLRUPolicyMSPerMB=50 -Djava.awt.headless=true"
+  ```
